--- a/manifest.json
+++ b/manifest.json
@@ -10,23 +10,28 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/img/favicon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "/img/apple-touch-icon.png",
-      "sizes": "180x180",
-      "type": "image/png"
+      "src": "/img/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
       "src": "/img/web-app-manifest-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
       "src": "/img/web-app-manifest-512x512.png",
       "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/img/screenshot1.png",
+      "sizes": "1080x1920",
       "type": "image/png"
     }
   ]
