l'ajustement des images manifest et résolution

--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,8 @@
     {
       "src": "/img/screenshot1.png",
       "sizes": "1080x1920",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
